feat: 프록시 설정 및 마이페이지 UI

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.13.5",
     "dotenv": "^17.2.4",
     "html5-qrcode": "^2.3.8",
+    "http-proxy-middleware": "^3.0.5",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-router-dom": "^7.13.0",
