--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "axios": "^1.13.5",
     "dotenv": "^17.2.4",
     "html5-qrcode": "^2.3.8",
-    "http-proxy-middleware": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-router-dom": "^7.13.0",
@@ -40,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "http-proxy-middleware": "^3.0.5"
   }
 }
